tests/e2e/not_allowed/public.error
Error: syntax error in story at line 1, column 1

1|    public = 1
      ^^^^^^

E0030: `public` is reserved for future use
